Fix binary safety in foreach() keys (fixes bug #24783)